# phloem

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  install.sh
.github/workflows/: ci.yml
docs/: README.md  architecture.md  context-management.md  rust-implementation.md
sql/: schema.sql
src/: lib.rs  main.rs
src/ai/: mod.rs  ollama_client.rs  prompt.rs  response.rs
src/cli/: args.rs  commands.rs  mod.rs  output.rs
src/config/: defaults.rs  mod.rs  settings.rs
src/context/: cache.rs  manager.rs  mod.rs  storage.rs
src/utils/: environment.rs  mod.rs  shell.rs  validation.rs
