[package]
name = "phloem"
version = "0.1.0"
edition = "2021"
description = "Secure, fast command suggestions using local models"
license = "MIT"
repository = "https://github.com/phloem-sh/phloem"
keywords = ["cli", "ai", "commands", "productivity"]
categories = ["command-line-utilities"]
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "phloem"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
rusqlite = { version = "0.30", features = ["bundled"] }
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
crossterm = "0.27"
arboard = "3.2"
log = "0.4"
env_logger = "0.10"
which = "4.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
regex = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true